<resources>
    <string name="app_name">TV Slideshow</string>
    <string name="splash_subtitle">Your memories, beautifully displayed</string>
    <string name="folder_path_label">Media Folder Path:</string>
    <string name="folder_path_hint">/storage/emulated/0/Pictures</string>
    <string name="delay_label">Delay (seconds):</string>
    <string name="browse_folder">Browse...</string>
    <string name="start_slideshow">Start Slideshow</string>
    <string name="slideshow_image_desc">Slideshow media</string>
    <string name="select_folder_title">Select Media Folder</string>
    <string name="select_this_folder">Select This Folder</string>
    <string name="include_subfolders">Include subfolders</string>
    <string name="mute_videos">Mute video audio</string>
    <string name="display_order_label">Order:</string>
    <string-array name="display_order_options">
        <item>Random</item>
        <item>Date (Oldest First)</item>
        <item>Date (Newest First)</item>
    </string-array>
</resources>
